--- a/index.html
+++ b/index.html
@@ -199,18 +199,18 @@
       <!--Tags-->
       <div id="tags">
         <div id="tag-total-1">
-          <span>Delete: 3</span>
+          <span>Incomplete: 3</span>
         </div>
         <div id="tag-total-2">
-          <span>Edit: 3</span>
+          <span>Total: 3</span>
         </div>
         <div id="tag-total-3">
-          <span>Check: 3</span>
+          <span>Complete: 3</span>
         </div>
       </div>
       <footer>
       <p>Elaborado por:</p>
-      <a href="https://github.com/alejandrordeveloper" target="_blank">Alejandro Ramirez</a>
+      <a href="https://github.com/alejandrordeveloper" target="_blank">Alejandro Ramírez</a>
       </p>
     </footer>
     </div>
