--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         </div>
       </div>
       <footer>
-      <p>Elaborado por:</p>
+      <p>Made by:</p>
       <a href="https://github.com/alejandrordeveloper" target="_blank">Alejandro Ramírez</a>
       </p>
     </footer>
